Se agrego las clases domino y el Template del proyecto

--- a/app/src/main/res/layout/fragment_project_detail.xml
+++ b/app/src/main/res/layout/fragment_project_detail.xml
@@ -14,7 +14,7 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
 
-            android:src="@drawable/logo_collapp2"
+            android:src="@drawable/png_logo_collapp2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
