--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context=".Login">
+    tools:context=".LoginActivity">
 <LinearLayout
     android:layout_marginTop="100dp"
     android:layout_width="match_parent"
@@ -17,7 +17,7 @@
         android:layout_width="180dp"
         android:layout_height="189dp"
         android:layout_gravity="center"
-        android:src="@drawable/logo_collapp2" />
+        android:src="@drawable/png_logo_collapp2" />
 
     <TextView
         android:layout_width="match_parent"
