--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Register">
+    tools:context=".RegisterActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
         <ImageView
             android:layout_width="115dp"
             android:layout_height="100dp"
-            android:src="@drawable/logo_collapp2" />
+            android:src="@drawable/png_logo_collapp2" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -127,9 +127,9 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/blue_wave"
+        android:src="@drawable/png_blue_wave"
         android:layout_gravity="bottom"
         android:adjustViewBounds="true"
-        android:scaleType="matrix"/>
+        android:scaleType="fitXY"/>
 
 </LinearLayout>
