--- a/app/src/main/res/drawable-v24/btn_actions.xml
+++ b/app/src/main/res/drawable-v24/btn_actions.xml
@@ -2,11 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="45dp"/>
-            <padding android:left="18dp"/>
+            <solid android:color="@color/white"/>
             <stroke
                 android:width="1dp"
-                android:color="#A8A8A8"
+                android:color="#FFFFFF"
                 />
         </shape>
     </item>
