--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,111 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
     tools:context=".LoginActivity">
-<LinearLayout
-    android:layout_marginTop="100dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <ImageView
-        android:layout_width="180dp"
-        android:layout_height="189dp"
-        android:layout_gravity="center"
-        android:src="@drawable/png_logo_collapp2" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:fontFamily="@font/rose_cake_personal_use"
-        android:text="(CollApp)"
-        android:textAlignment="center"
-        android:textSize="65sp" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/samantha"
-        android:text="Unifying creativity and creators"
-        android:textAlignment="center"
-        android:textSize="18sp" />
-</LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/et_email"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:hint="Email"
-            android:fontFamily="@font/roboto_light"
-            android:ems="10"
-            android:layout_marginLeft="65dp"
-            android:layout_marginRight="65dp"
-            android:inputType="textEmailAddress"
-            android:background="@drawable/round_et"/>
-        <EditText
-            android:id="@+id/et_password"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:hint="Password"
-            android:fontFamily="@font/roboto_light"
-            android:ems="10"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="65dp"
-            android:layout_marginRight="65dp"
-            android:inputType="textPassword"
-            android:background="@drawable/round_et"/>
 
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_login"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginLeft="120dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="120dp"
-            android:background="@drawable/round_btn"
-            android:fontFamily="@font/roboto_light"
-            android:text="Login"
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="@dimen/btn_text"
-            android:textStyle="bold" />
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginTop="8dp"
-        android:layout_gravity="center"
-        android:orientation="horizontal">
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_light"
-            android:textSize="15sp"
-            android:text="Don't have an account?"/>
-        <TextView
-            android:id="@+id/tv_signup"
+            android:layout_marginTop="40dp"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="180dp"
+                android:layout_height="189dp"
+                android:layout_gravity="center"
+                android:src="@drawable/png_logo_collapp2" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/rose_cake_personal_use"
+                android:text="(CollApp)"
+                android:textAlignment="center"
+                android:textColor="@color/rose_cake_color"
+                android:textSize="65sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/samantha"
+                android:text="Unifying creativity and creators"
+                android:textAlignment="center"
+                android:textColor="@color/rose_cake_color"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_light"
-            android:textColor="#F6AFD5"
-            android:textStyle="bold"
-            android:textSize="15sp"
-            android:text=" Sign up!"/>
-    </LinearLayout>
-    </LinearLayout>
+            android:layout_marginTop="40dp"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/et_email"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="65dp"
+                android:layout_marginRight="65dp"
+                android:background="@drawable/round_et"
+                android:ems="10"
+                android:fontFamily="@font/roboto_light"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:shadowColor="#989898"
+                android:textColor="@color/black" />
+
+            <EditText
+                android:id="@+id/et_password"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="65dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="65dp"
+                android:background="@drawable/round_et"
+                android:ems="10"
+                android:fontFamily="@font/roboto_light"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:shadowColor="#989898"
+                android:textColor="@color/black" />
 
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_login"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="120dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="120dp"
+                android:background="@drawable/round_btn"
+                android:fontFamily="@font/roboto_light"
+                android:text="Login"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="@dimen/btn_text"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_light"
+                    android:text="Don't have an account?"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/tv_signup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_light"
+                    android:text=" Sign up!"
+                    android:textColor="#F6AFD5"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </LinearLayout>
 </LinearLayout>
