--- a/app/src/main/res/layout/fragment_project_detail.xml
+++ b/app/src/main/res/layout/fragment_project_detail.xml
@@ -87,7 +87,7 @@
 
         </LinearLayout>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/flaot_add"
+            android:id="@+id/float_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
