--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,8 +23,14 @@
         android:label="@string/title_user"
         tools:layout="@layout/fragment_user" />
     <fragment
-        android:id="@+id/navigation_project"
-        android:name="VEM.Movil.collapp.Project_Detail_Fragment"
-        android:label="project"
+        android:id="@+id/navigation_new_project"
+        android:name="VEM.Movil.collapp.NewProjectFragment"
+        android:label="@string/title_new_project"
+        tools:layout="@layout/fragment_new_project" />
+
+    <fragment
+        android:id="@+id/navigation_project_detail"
+        android:name="VEM.Movil.collapp.ProjectDetail1Fragment"
+        android:label="@string/title_detail_project"
         tools:layout="@layout/fragment_project_detail" />
 </navigation>
