--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,8 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
 
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="15dp"
             android:src="@drawable/png_logo_collapp2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
