--- a/app/src/main/res/layout/activity_new_project.xml
+++ b/app/src/main/res/layout/activity_new_project.xml
@@ -38,8 +38,11 @@
     <LinearLayout
         android:layout_width="346dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:paddingTop="65dp"
         android:layout_gravity="center"
-        android:layout_marginTop="15dp"
+        android:layout_marginStart="0dp"
         android:orientation="vertical">
 
         <ScrollView
