--- a/app/src/main/res/layout/stage.xml
+++ b/app/src/main/res/layout/stage.xml
@@ -24,24 +24,23 @@
             />
 
         <ImageButton
-            android:id="@+id/btn_cancelNewProject"
+            android:id="@+id/btn_cancelStage"
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_marginLeft="-65dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="3dp"
             android:layout_gravity="center"
             android:background="@drawable/btn_actions"
             android:src="@drawable/ic_cancel"
             android:scaleType="fitCenter"
+            android:tint="@color/btnchooseimg"
             android:adjustViewBounds="true"/>
     </LinearLayout>
-
 
     <View
         android:layout_width="354dp"
         android:layout_height="1dp"
         android:layout_marginHorizontal="15dp"
         android:background="@color/btnchooseimg" />
-
 
 </LinearLayout>
