--- a/app/src/main/res/drawable/bg_popup.xml
+++ b/app/src/main/res/drawable/bg_popup.xml
@@ -2,12 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-
+            <solid android:color="@color/white"/>
             <corners android:radius="45dp"/>
-            <padding android:left="18dp"/>
             <stroke
                 android:width="1dp"
-                android:color="#A8A8A8"
+                android:color="#E3E3E1"
                 />
         </shape>
     </item>
