--- a/app/src/main/res/drawable/round_bg_stage.xml
+++ b/app/src/main/res/drawable/round_bg_stage.xml
@@ -2,9 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-
-            <corners android:radius="45dp"/>
-            <padding android:left="18dp"/>
+            <solid android:color="@color/bg3"/>
+            <corners android:radius="40dp"/>
             <stroke
                 android:width="1dp"
                 android:color="#A8A8A8"
