--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,6 +55,7 @@
                 android:ems="10"
                 android:fontFamily="@font/roboto_light"
                 android:hint="Email"
+                android:text="supergonzalez360@gmail.com"
                 android:inputType="textEmailAddress"
                 android:shadowColor="#989898"
                 android:textColor="@color/black" />
@@ -70,6 +71,7 @@
                 android:ems="10"
                 android:fontFamily="@font/roboto_light"
                 android:hint="Password"
+                android:text="12345678"
                 android:inputType="textPassword"
                 android:shadowColor="#989898"
                 android:textColor="@color/black" />
