--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,6 +54,7 @@
                 android:background="@drawable/round_et"
                 android:ems="10"
                 android:fontFamily="@font/roboto_light"
+                android:text="supergonzalez360@gmail.com"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
                 android:shadowColor="#989898"
@@ -68,6 +69,7 @@
                 android:layout_marginRight="65dp"
                 android:background="@drawable/round_et"
                 android:ems="10"
+                android:text="12345678"
                 android:fontFamily="@font/roboto_light"
                 android:hint="Password"
                 android:inputType="textPassword"
