--- a/app/src/main/res/layout/activity_new_project.xml
+++ b/app/src/main/res/layout/activity_new_project.xml
@@ -37,17 +37,17 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
-        android:layout_width="346dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
         android:paddingTop="65dp"
+        android:id="@+id/layout_new_project"
         android:layout_gravity="center"
-        android:layout_marginStart="0dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         android:orientation="vertical">
 
         <ScrollView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
@@ -63,16 +63,14 @@
                     android:textAlignment="center"
                     android:textSize="25sp"></TextView>
 
-                <Button
+                <ImageView
                     android:id="@+id/btn_chooseImg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="91dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="20dp"
-                    android:background="@drawable/round_btn_chooseimg"
-                    android:backgroundTint="@color/btnchooseimg"
-                    android:text="Choose\nproject\nimage"
-                    android:textAllCaps="false" />
+                    android:src="@drawable/choose"
+                    />
 
                 <ImageView
                     android:id="@+id/img_chooseimgfill"
@@ -101,16 +99,18 @@
 
                     <EditText
                         android:id="@+id/et_StartDate"
-                        android:layout_width="160dp"
+                        android:layout_width="170dp"
                         android:layout_height="50dp"
                         android:layout_marginLeft="0dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginRight="5dp"
+                        android:clickable="true"
+                        android:focusable="false"
+                        android:maxLines="1"
                         android:background="@drawable/round_et"
-                        android:ems="10"
                         android:fontFamily="@font/roboto_light"
                         android:hint="Start date"
-                        android:inputType="text" />
+                        android:inputType="date" />
 
                     <EditText
                         android:id="@+id/et_deadline"
@@ -119,11 +119,13 @@
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginRight="5dp"
+                        android:clickable="true"
+                        android:focusable="false"
+                        android:maxLines="1"
                         android:background="@drawable/round_et"
-                        android:ems="10"
                         android:fontFamily="@font/roboto_light"
                         android:hint="Deadline"
-                        android:inputType="text" />
+                        android:inputType="date" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -201,6 +203,17 @@
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
+<!--
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/png_blue_wave"
+            app:layout_constraintBottom_toBottomOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+-->
 </RelativeLayout>
