--- a/app/src/main/res/layout/activity_project_detail.xml
+++ b/app/src/main/res/layout/activity_project_detail.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/ll_main"
     tools:context=".ProjectDetailActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,14 +15,12 @@
             android:id="@+id/imageView"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
             android:src="@drawable/png_logo_collapp2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/iv_image_project"
+            android:id="@+id/iv_user"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity=""
@@ -32,22 +29,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageButton
-            android:id="@+id/btn_cancelDetailProject"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:adjustViewBounds="true"
-            android:background="@drawable/btn_actions"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_cancel"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -83,7 +64,6 @@
                     />
 
                 <TextView
-                    android:id="@+id/tv_detail_deadline"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_light"
@@ -94,25 +74,23 @@
             </LinearLayout>
 
 
-                <LinearLayout
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <!--¿Lista o GridView? -->
+                <GridView
+                    android:id="@+id/gridview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
-                    android:orientation="vertical">
-                    <ExpandableListView
-                        android:id="@+id/list_stages_exp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:groupIndicator="@null"
-                        android:divider="@null"
-                        android:dividerHeight="10dp"/>
-                </LinearLayout>
+
+                    android:numColumns="1"></GridView>
+
+            </ScrollView>
 
 
         </LinearLayout>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/float_add_stage"
+            android:id="@+id/float_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
