--- a/app/src/main/res/layout/activity_project_detail.xml
+++ b/app/src/main/res/layout/activity_project_detail.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/ll_main"
     tools:context=".ProjectDetailActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,12 +16,14 @@
             android:id="@+id/imageView"
             android:layout_width="70dp"
             android:layout_height="70dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/png_logo_collapp2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/iv_user"
+            android:id="@+id/iv_image_project"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity=""
@@ -29,6 +32,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/btn_cancelDetailProject"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/btn_actions"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_cancel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -64,6 +83,7 @@
                     />
 
                 <TextView
+                    android:id="@+id/tv_detail_deadline"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_light"
@@ -74,23 +94,25 @@
             </LinearLayout>
 
 
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <!--¿Lista o GridView? -->
-                <GridView
-                    android:id="@+id/gridview"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-
-                    android:numColumns="1"></GridView>
-
-            </ScrollView>
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="40dp"
+                    android:orientation="vertical">
+                    <ExpandableListView
+                        android:id="@+id/list_stages_exp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:groupIndicator="@null"
+                        android:divider="@null"
+                        android:dividerHeight="10dp"/>
+                </LinearLayout>
 
 
         </LinearLayout>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/float_add"
+            android:id="@+id/float_add_stage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
