--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -80,7 +80,7 @@
                 <ListView
                     android:id="@+id/list_projects"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
                     android:divider="@null"
                     android:dividerHeight="15dp"
