--- a/app/src/main/res/layout/project.xml
+++ b/app/src/main/res/layout/project.xml
@@ -81,7 +81,7 @@
                     <ListView
                         android:id="@+id/list_stages"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:divider="@null"
                         android:scrollbars="vertical"
                         android:scrollingCache="true"
